--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.0"
     //RxAndroid
     implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
-
+// Kotlin Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 }
